--- a/opentreemap/treemap/templates/treemap/field/species_ul.html
+++ b/opentreemap/treemap/templates/treemap/field/species_ul.html
@@ -4,10 +4,6 @@
     <li class="chunk-content" data-typeahead="{{ field.identifier }}"
         data-datum="common_name">{{ field.value.common_name }}</li>
     <li class="chunk-content">
-      <input type="hidden"
-             value="{{ field.value.id }}"
-             data-typeahead-restore="{{ field.identifier}}"
-             data-datum="id" />
       <em data-typeahead="{{ field.identifier }}"
           data-datum="scientific_name">{{ field.value.scientific_name }}</em>
     </li>
@@ -16,20 +12,11 @@
   <ul class="chunk" style="display: none;" data-class="edit">
     <li class="chunk-label">{% trans "Species" %}</li>
     <li class="chunk-content">
-      <input type="hidden"
-             data-typeahead-hidden
-             id="{{ field.label }}-hidden"
-             name="{{ field.identifier }}"
-             value="{{ field.value.id }}"/>
-      <input type="text"
-             data-typeahead-input="{{ field.identifier }}"
-             id="{{ field.label }}-typeahead"
-             value="{{ field.value.display_name }}"/>
+      {% include "treemap/field/typeahead.html" %}
     </li>
     <li class="chunk-content text-error"
-        data-field="{{ field.identifier }}"
-        data-class="error"
-        style="display: none;">
+        style="display: none;"
+        {% include "treemap/field/attrs.html" with class="error"%}>
     </li>
   </ul>
   {% endif %}
