--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -27,7 +27,7 @@
     <h3>{% trans "Search by Species" %}</h3>
     <div class="search-field-group">
       <input type="text" data-class="search" id="species-typeahead" placeholder="American basswood"/>
-      <input type="hidden" id="search-species" />
+      <input name="tree.species" data-search-type="IS" type="hidden" id="search-species" />
     </div>
   </div>
 
@@ -36,7 +36,7 @@
     <h3>{% trans "Search by Location" %}</h3>
     <div class="search-field-group">
       <input type="text" data-class="search" id="boundary-typeahead" placeholder="340 N 12th St, Philadelphia"/>
-      <input type="hidden" id="boundary" />
+      <input name="plot.geom" data-search-type="IN_BOUNDARY" type="hidden" id="boundary" />
     </div>
   </div>
 </div> <!-- end search block wrapper -->
