--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -11,10 +11,10 @@
 <script>
 (function(require) {
     var $ = require("jquery"),
-        app = require("app");
+        map = require("map");
 
     $(function(){
-        app.initMapPage(otm.settings);
+        map.initMapPage(otm.settings);
     })
 })(require);
 </script>
