Switch add tree to use create templatetag

--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -16,11 +16,11 @@
 
     <h4>2. {% trans "Additional information" %}</h4>
     <form id="add-tree-form">
-        {# The "add-tree-species" label is used as an id prefix in "field_species.html" #}
-        {% field "add-tree-species" from "tree.species" withtemplate "treemap/field_species.html" %}
+        {# The "add-tree-species" label is used as an id prefix in "species_ul.html" #}
+        {% create "add-tree-species" from "tree.species" withtemplate "treemap/field/species_ul.html" %}
 
         {% for label, identifier in fields_for_add_tree %}
-            {% field label from identifier withtemplate "treemap/field.html" %}
+            {% create label from identifier withtemplate "treemap/field/ul.html" %}
         {% endfor %}
     </form>
 
