form_extras.py ("field" template tag) supports values stored in JSON fields
Also:
* misc. support for admin site
* recover from merge

--- a/opentreemap/treemap/css/sass/partials/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/_admin.scss
@@ -51,6 +51,11 @@ $nav-width: 200px;
                 background: #c2c2c2 !important;
         }
 
+        .admin .chunk {
+            list-style: none;
+            padding: 5px 0 15px;
+            margin: 0;
+        }
 
 /* Bulk Uploader ---------------------- */
 
