DRY out use of JSON error return utilities
* Move JSON error return utilites to util.py
* Fix a bug in field/ul.html template
* Fix URL in browseTreesMode.js

--- a/opentreemap/treemap/templates/treemap/field/ul.html
+++ b/opentreemap/treemap/templates/treemap/field/ul.html
@@ -13,7 +13,7 @@
             </li>
             <li class="chunk-content text-error"
                 style="display: none;"
-                {% include "treemap/field/attrs.html" with class="error">
+                {% include "treemap/field/attrs.html" with class="error" %}>
             </li>
         {% endif %}
     </ul>
