Support "Missing" advanced search fields

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -58,6 +58,11 @@
     {% search from json for request.user in request.instance withtemplate "treemap/field/search.html" %}
   {% endfor %}
   </div>
+  <div id="missing-search">
+  {% for json in request.instance.advanced_search_fields.missing %}
+    {% search from json for request.user in request.instance withtemplate "treemap/field/search_missing.html" %}
+  {% endfor %}
+  </div>
 </div>
 {% endblock advancedsearch %}
 
