--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -9,11 +9,17 @@
 
     {% if settings.TEMPLATE_DEBUG %}
     <link href="{{ STATIC_URL }}css/vendor.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/main.css" rel="stylesheet">
     {% else %}
     <link href="{{ STATIC_URL }}css/vendor.min.css" rel="stylesheet">
+    {% endif %}
+
+    {% block application_css %}
+    {% if settings.TEMPLATE_DEBUG %}
+    <link href="{{ STATIC_URL }}css/main.css" rel="stylesheet">
+    {% else %}
     <link href="{{ STATIC_URL }}css/main.min.css" rel="stylesheet">
     {% endif %}
+    {% endblock application_css %}
 
     <!--[if lt IE 9]>
       <script src="{{ STATIC_URL }}js/html5shiv.js"></script>
