Use search key of "species.id" instead of "tree.species", fixes #402

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -27,7 +27,7 @@
     <h3>{% trans "Search by Species" %}</h3>
     <div class="search-field-group">
       <input type="text" data-class="search" id="species-typeahead" placeholder="American basswood"/>
-      <input name="tree.species" data-search-type="IS" type="hidden" id="search-species" />
+      <input name="species.id" data-search-type="IS" type="hidden" id="search-species" />
     </div>
   </div>
 
