--- a/opentreemap/treemap/templates/treemap/partials/upload_image.html
+++ b/opentreemap/treemap/templates/treemap/partials/upload_image.html
@@ -1,16 +1,16 @@
-<div id="addPhotoModal" class="modal hide fade">
+<div id="{{ panelId }}" class="modal hide fade">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
     <h2>{{ title }}</h2>
   </div>
   <div class="modal-body">
-    <form id="add-photo-form" method="POST" enctype="multipart/form-data" action="{{ endpoint }}">
+    <form method="POST" enctype="multipart/form-data" action="{{ endpoint }}">
       {% csrf_token %}
-      Image: <input type="file" name="file" id="file">
+      Image: <input type="file" name="file">
     </form>
   </div>
   <div class="modal-footer">
     <a href="#" class="btn" data-dismiss="modal">Close</a>
-    <a href="#" id="addimage" class="btn btn-primary">Upload</a>
+    <a href="#" class="btn btn-primary uploadBtn">Upload</a>
   </div>
 </div>
