Simplify error handling for tree photo upload

--- a/opentreemap/treemap/templates/treemap/partials/upload_image.html
+++ b/opentreemap/treemap/templates/treemap/partials/upload_image.html
@@ -1,4 +1,4 @@
-<div id="{{ panelId }}" class="modal hide fade">
+<div id="{{ panel_id }}" class="modal hide fade">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
     <h2>{{ title }}</h2>
