Add endpoint for compiling the SCSS with extra variables

--- a/opentreemap/treemap/css/sass/_base.scss
+++ b/opentreemap/treemap/css/sass/_base.scss
@@ -4,8 +4,8 @@ $base-font-family		: 'Open Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, 
 $base-font-size			: 16px;
 
 // Colors
-$primary-color			: #8baa3d; // OTM Green color
-$secondary-color		: #56abb2; // OTM Teal color 
+$primary-color			: #8baa3d !default; // OTM Green color
+$secondary-color		: #56abb2 !default; // OTM Teal color
 $success-color			: #add142; // OTM Lime Green color
 $warning-color			: #e0c122; // Warning color
 $alert-color			: #df4425; // OTM Red color
