--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -70,7 +70,7 @@
               {# The "plot-species" label is used as an id prefix in "field/species_tr.html" #}
               {% field "plot-species" from "tree.species" for request.user withtemplate "treemap/field/species_tr.html" %}
               {% trans "Trunk Diameter" as diameter %}
-              {% field diameter from "tree.diameter" for request.user withtemplate "treemap/field/tr.html" %}
+              {% field diameter from "tree.diameter" for request.user withtemplate "treemap/field/diameter_tr.html" %}
               {% trans "Tree Height" as height %}
               {% field height from "tree.height" for request.user withtemplate "treemap/field/tr.html" %}
               {% trans "Canopy Height" as canopy %}
