--- a/opentreemap/treemap/css/sass/partials/_typography.scss
+++ b/opentreemap/treemap/css/sass/partials/_typography.scss
@@ -60,6 +60,10 @@ textarea,
 	}
 }
 
+textarea {
+	resize: none;
+}
+
 .btn-mini [class^="icon-"], 
 .btn-mini [class*=" icon-"] {
 	margin-top: 1px;
