--- a/opentreemap/treemap/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/css/sass/partials/_navbar.scss
@@ -3,6 +3,10 @@
 .navbar {
     font-size: 1em;
 
+    @media (max-width: 979px) {
+        margin-bottom: 0;
+    }
+
     .navbar-inner {
         background: $navbar-color;
         border: none;
